--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/styles.css">
+    <title>Zig</title>
     <link rel="icon" type="icon" href="/src/img/leytaZ.png" class="icn">
 </head>
 <header>
