--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/projects.css">
+    <title>Zig</title>
     <script defer src="/src/js/script.js"></script>
 </head>
 
