--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/about-me.css">
+    <link rel="icon" type="icon" href="/src/img/leytaZ.png" class="icn">
     <title>Zig</title>
 </head>
 <header>
