--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/projects.css">
     <title>Zig</title>
+    <link rel="icon" type="icon" href="/src/img/leytaZ.png" class="icn">
     <script defer src="/src/js/script.js"></script>
 </head>
 
