--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,6 +8,7 @@
     <title>Zig</title>
     <link rel="icon" type="icon" href="/src/img/leytaZ.png" class="icn">
     <script defer src="/src/js/script.js"></script>
+
 </head>
 
 <header>
@@ -20,15 +21,32 @@
 </header>
 
 <body>
+
+    <section class="projetos">
+        <div class="projetos-titulo">
+            <h1 class="titulo">
+                Projetos
+            </h1>
+        </div>
+        <div class="carousel-container">
+            <div class="carousel">
+                <img class="projetos-image" src="/src/img/trash.png" alt="">
+                <img class="projetos-image" src="/src/img/alurabooks.png" alt="">
+                <img class="projetos-image" src="/src/img/lista-compras.png" alt="">
+                <img class="projetos-image" src="/src/img/fokus.png" alt="">
+            </div>
+            <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+            <button class="next" onclick="moveSlide(1)">&#10095;</button>
+        </div>
+    </section>
+
     <section class="all">
         <section class="section-lista">
             <a href="https://github.com/Lo-Zig/TrasHealth" class="lista" data-image="/src/img/python.png">
                 <div>
                     <p class="descricao">
                         <img src="/src/img/python.png" class="images-linguagens">
-                        Um sistema que mapeia os pontos de descarte de lixo eletrônico em nossa cidade. Ele também
-                        possibilita que o usuário crie anúncios relacionados ao descarte responsável desse tipo de
-                        resíduo.
+                        Um sistema que mapeia os pontos de descarte de lixo eletrônico em nossa cidade.
                     </p>
                 </div>
             </a>
@@ -37,6 +55,22 @@
                     <p class="descricao">
                         <img src="/src/img/JavaScript-logo.png" class="images-linguagens">
                         Um site que mostra os livros disponíveis no estoque (orientado a API)
+                    </p>
+                </div>
+            </a>
+            <a href="https://github.com/Lo-Zig/Fokus" class="lista" data-image="/src/img/JavaScript-logo.png">
+                <div>
+                    <p class="descricao">
+                        <img src="/src/img/JavaScript-logo.png" class="images-linguagens">
+                        Um timer para estudos!
+                    </p>
+                </div>
+            </a>
+            <a href="https://github.com/Lo-Zig/Lista-De-Compras" class="lista" data-image="/src/img/JavaScript-logo.png">
+                <div>
+                    <p class="descricao">
+                        <img src="/src/img/JavaScript-logo.png" class="images-linguagens">
+                        Uma lista de compras de supermercado!
                     </p>
                 </div>
             </a>
@@ -50,29 +84,21 @@
                     </p>
                 </div>
             </a>
-            <a href="https://github.com/Lo-Zig/Fokus" class="lista" data-image="/src/img/JavaScript-logo.png">
-                <div>
-                    <p class="descricao">
-                        <img src="/src/img/JavaScript-logo.png" class="images-linguagens">
-                        Um timer para estudos!
-                    </p>
-                </div>
-            </a>
-
-            <div class="btn">
-                <a href="https://github.com/Lo-Zig?tab=repositories" class="aboutme">
-                    <img class="git"
-                        src="/src/img/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png"
-                        alt=""> Repositório completo
-                </a>
-            </div>
+            
         </section>
         <div class="container-imagem">
             <img class="image-container" id="preview-image" src="/src/img/assign-removebg-preview.png" alt=""
                 style="transition: opacity 200ms ease-in-out;">
-        </div>
+            </div>
     </section>
-</body>
+    <div class="btn">
+        <a href="https://github.com/Lo-Zig?tab=repositories" class="aboutme">
+            <img class="git"
+                src="/src/img/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png"
+                alt=""> Repositório completo
+            </a>
+        </div>
+    </body>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const listItems = document.querySelectorAll(".lista");
@@ -97,6 +123,27 @@
             });
         });
     });
+</script>
+<script>
+    let currentIndex = 0;
+    const images = document.querySelectorAll('.projetos-image');
+    const totalImages = images.length;
+    const carousel = document.querySelector('.carousel');
+
+    function moveSlide(direction) {
+        currentIndex += direction;
+        if (currentIndex < 0) {
+            currentIndex = totalImages - 1;
+        } else if (currentIndex >= totalImages) {
+            currentIndex = 0;
+        }
+        updateCarousel();
+    }
+
+    function updateCarousel() {
+        const offset = -currentIndex * 100;
+        carousel.style.transform = `translateX(${offset}%)`;
+    }
 </script>
 
 </html>
