--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -25,14 +25,13 @@
                     Zig
                 </h1>
                 <p class="descricao">
-                      Me chamo Lorenzo Muller Ziglioli, mas pode me chamar de "Zig", tenho 18 anos e sou formado técnico
-                    em informática (o proprio
-                    informático... rs) Sou desenvolvedor júnior e aos poucos estou criando uma bagagem de conhecimento
-                    na area para me tornar cada vez melhor!
+                      Me chamo Lorenzo Muller Ziglioli, mas pode me chamar de "Zig". Tenho 18 anos e sou formado como
+                    técnico em informática (o próprio informático... rs). Sou desenvolvedor júnior e, aos poucos, estou
+                    construindo uma bagagem de conhecimento na área para me tornar cada vez melhor!
                 <p class="descricao">
-                      Gosto muito de jogar com meus amigos no tempo livre (o que
-                    não são muitos). Counter-Strike sem duvida é o jogo que eu mais joguei, na verdade eu vivi esse
-                    jogo, porém não sou bom o suficiente para viver dele :(</p>
+                      Gosto muito de jogar com meus amigos no tempo livre (que, aliás, não é muito). Counter-Strike, sem
+                    dúvida, é o jogo que mais joguei—na verdade, eu vivi esse jogo! Porém, não sou bom o suficiente para
+                    viver dele. :(</p>
                 </p>
             </div>
             <img class="image-zig" src="/src/img/Zig.jpg" alt="">
@@ -47,9 +46,9 @@
                     LoQQuei
                 </h1>
                 <p class="descricao2">
-                    Trabalho em uma empresa chamada LoQQuei, que esta crescendo, estou responsável por toda a
-                    prototipação e documentação do front-end. Ainda não comeceia codar pois eu sempre utilizar React,
-                    mas aqui, estamos usando Flutter(eu nem sabia oq era isso até semana passada).
+                    Trabalho em uma empresa chamada LoQQuei, que está crescendo. Sou responsável por toda a prototipação
+                    e documentação do front-end. Ainda não comecei a codar, pois sempre utilizei React, mas aqui estamos
+                    usando Flutter (eu nem sabia o que era isso até semana passada).
 
             </div>
         </div>
@@ -62,10 +61,9 @@
                     Repertório
                 </h1>
                 <p class="descricao">
-                      Meu repertório ainda não é dos maiores, porém trabalho diariamente para aumentar e aperfeiçoar
-                    minha habilidades.
-                    Hoje, trabalho com Python, JavaScript e Dart... Mas sem duvida o que eu mais gosto de fazer é a
-                    marcação de páginas com HTML e CSS
+                      Meu repertório ainda não é dos maiores, mas trabalho diariamente para aumentar e aperfeiçoar
+                    minhas habilidades. Hoje, trabalho com Python, JavaScript e Dart, mas, sem dúvida, o que eu mais
+                    gosto de fazer é a marcação de páginas com HTML e CSS.
             </div>
             <img class="image-zig3" src="/src/img/prog.png" alt="">
         </div>
@@ -79,8 +77,8 @@
                     Cusos e Formações
                 </h1>
                 <p class="descricao2">
-                    Sou formado como Técnico em Informática pelo IFSC campûs Xanxerê, a agora estou me graduando
-                    Analista e Desenvolvedor de Sistemas... Tenho também inúmeros cursos e formações completas na Alura!
+                    Sou formado como Técnico em Informática pelo IFSC campus Xanxerê e agora estou me graduando em
+                    Análise e Desenvolvimento de Sistemas. Tenho também inúmeros cursos e formações completas na Alura!
             </div>
         </div>
     </section>
@@ -90,17 +88,18 @@
                 Gosto musical e mais sobre mim!
             </h1>
             <p class="descricao4">
-                  Meus gosto musica se baseia basicamente na cultura do Hip-Hop e do Trap/Rap... Artistas como Veigh, Teto
-                e Matuê sao com certeza minha maior referencia no cenário nascional da musica!
-                Já quando falamos de cenário internascionar, artistar como 21 Savage, Metro Boomin e Kendrick Lamar são
-                com certeza os que mais me chamam a atenção! </p>
+                  Meus gostos musicais se baseiam principalmente na cultura do Hip-Hop e do Trap/Rap. Artistas como
+                Veigh, Teto e Matuê são, com certeza, minhas maiores referências no cenário nacional da música. Já no
+                cenário internacional, artistas como 21 Savage, Metro Boomin e Kendrick Lamar são os que mais me chamam
+                a atenção!</p>
             <p class="descricao4">
-                  Quando falamos de esportes não posso deixar de falar que aqui é Grêmio pra caralho ❤️<br> Sem duvida uma
-                paixão que tenho desde muleke, uma paixão de vem de vô para pai, e de pai para filho, e que se der tudo
-                certo, passara de filho para neto...
+                  Quando falamos de esportes, não posso deixar de dizer: aqui é Grêmio pra caralho ❤️. Sem dúvida, é uma
+                paixão que tenho desde moleque, uma paixão que vem de vô para pai, e de pai para filho, e que, se tudo
+                der certo, passará de avô para neto...
             </p>
             <p class="descricao4">
-                 Outra paixão que tenho também, ou melhor, uma compulsão é por tênis, gosto muito de colecionar e fazer deles mais especiais ainda!
+                  Outra paixão que tenho também, ou melhor, uma compulsão, é por tênis. Gosto muito de colecionar e de
+                torná-los ainda mais especiais!
             </p>
         </div>
         <div class="music">
