--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,6 +40,53 @@
         </div>
     </section>
 
+    <section class="section-cards">
+        <div class="cards">
+            <div class="imagem-card">
+                <img class="img-card" src="/src/img/criatividade.png" alt="">
+            </div>
+            <div class="text-dard">
+                <h1 class="titulo-card">
+                    Criatividade!
+                </h1>
+                <p class="descricao-card">
+                    Transformo ideias em soluções inovadoras, trazendo frescor e intensidade a cada linha de código.
+                    Cada projeto é uma oportunidade de criar algo único, sempre buscando a melhor forma de fazer as
+                    coisas.
+                </p>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="imagem-card">
+                <img class="img-card" src="/src/img/equipe.png" alt="">
+            </div>
+            <div class="text-dard">
+                <h1 class="titulo-card">
+                    Trabalho em equipe
+                </h1>
+                <p class="descricao-card">
+                    Juntos, podemos unir forças, compartilhar ideias e
+                    superar qualquer desafio. Cada membro traz algo único, e é isso que faz o trabalho em equipe ser tão
+                    poderoso!
+                </p>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="imagem-card">
+                <img class="img-card" src="/src/img/estudo.png" alt="">
+            </div>
+            <div class="text-dard">
+                <h1 class="titulo-card">
+                    Sempre aprendendo
+                </h1>
+                <p class="descricao-card">
+                    Posso até não saber de cara, mas enquanto nada me impedir de aprender, farei o que for necessário
+                    Acredito que o aprendizado é uma jornada contínua. 
+                </p>
+            </div>
+        </div>
+    </section>
+
     <section class="all">
         <section class="section-lista">
             <a href="https://github.com/Lo-Zig/TrasHealth" class="lista" data-image="/src/img/python.png">
@@ -66,7 +113,8 @@
                     </p>
                 </div>
             </a>
-            <a href="https://github.com/Lo-Zig/Lista-De-Compras" class="lista" data-image="/src/img/JavaScript-logo.png">
+            <a href="https://github.com/Lo-Zig/Lista-De-Compras" class="lista"
+                data-image="/src/img/JavaScript-logo.png">
                 <div>
                     <p class="descricao">
                         <img src="/src/img/JavaScript-logo.png" class="images-linguagens">
@@ -84,21 +132,21 @@
                     </p>
                 </div>
             </a>
-            
+
         </section>
         <div class="container-imagem">
             <img class="image-container" id="preview-image" src="/src/img/assign-removebg-preview.png" alt=""
                 style="transition: opacity 200ms ease-in-out;">
-            </div>
+        </div>
     </section>
     <div class="btn">
         <a href="https://github.com/Lo-Zig?tab=repositories" class="aboutme">
             <img class="git"
-                src="/src/img/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png"
-                alt=""> Repositório completo
-            </a>
-        </div>
-    </body>
+                src="/src/img/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png" alt="">
+            Repositório completo
+        </a>
+    </div>
+</body>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const listItems = document.querySelectorAll(".lista");
