--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -13,7 +13,7 @@
         <a href="/index.html"><img class="image-logo" src="/src/img/leytaZ.png" alt=""></a>
     </div>
     <div class="logo">
-        <a href="https://www.instagram.com.br/loziglioli"><img class="image-logo" src="/src/img/insta.png" alt=""></a>
+        <a href="https://www.instagram.com.br/loziglioli"><img class="image-logo" src="/src/img/instagram.png" alt=""></a>
     </div>
 </header>
 
