--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -13,8 +13,7 @@
         <a href="/index.html"><img class="image-logo" src="/src/img/leytaZ.png" alt=""></a>
     </div>
     <div class="logo">
-        <a href="https://www.instagram.com.br/loziglioli"><img class="image-logo" src="/src/img/instagram.png"
-                alt=""></a>
+        <a href="https://www.instagram.com.br/loziglioli"><img class="image-logo" src="/src/img/instagram.png" alt=""></a>
     </div>
 </header>
 
@@ -40,22 +39,25 @@
     </section>
 
     <section class="about-me">
-        <div class="info">
-            <div class="txt">
-                <h1 class="titulo">
+        <div class="info2">
+            <img class="image-zig2" src="/src/img/loqquei.png" alt="">
+            <div class="txt2">
+                <h1 class="titulo2">
                     LoQQuei
                 </h1>
-                <p class="descricao">
+                <p class="descricao2">
                     Trabalho em uma empresa chamada LoQQuei, que está crescendo. Sou responsável por toda a prototipação
                     e documentação do front-end. Ainda não comecei a codar, pois sempre utilizei React, mas aqui estamos
                     usando Flutter (eu nem sabia o que era isso até semana passada).
-            </div> <img class="image-zig" src="/src/img/loqquei.png" alt="">
+
+            </div>
+            <img class="image-zig2-o" src="/src/img/loqquei.png" alt="">
         </div>
     </section>
 
     <section class="about-me">
-        <div class="info">
-            <div class="txt">
+        <div class="info3">
+            <div class="txt3">
                 <h1 class="titulo">
                     Repertório
                 </h1>
@@ -64,44 +66,49 @@
                     minhas habilidades. Hoje, trabalho com Python, JavaScript e Dart, mas, sem dúvida, o que eu mais
                     gosto de fazer é a marcação de páginas com HTML e CSS.
             </div>
-            <img class="image-zig" src="/src/img/prog.png" alt="">
+            <img class="image-zig3" src="/src/img/prog.png" alt="">
         </div>
     </section>
 
     <section class="about-me">
-        <div class="info">
-            <div class="txt">
-                <h1 class="titulo">
+        <div class="info2">
+            <img class="image-zig2" src="/src/img/aluifsc.png" alt="">
+            <div class="txt2">
+                <h1 class="titulo2">
                     Cusos e Formações
                 </h1>
-                <p class="descricao">
+                <p class="descricao2">
                     Sou formado como Técnico em Informática pelo IFSC campus Xanxerê e agora estou me graduando em
                     Análise e Desenvolvimento de Sistemas. Tenho também inúmeros cursos e formações completas na Alura!
             </div>
-            <img class="image-zig2" src="/src/img/aluifsc.png" alt="">
+            <img class="image-zig2-o" src="/src/img/aluifsc.png" alt="">
         </div>
     </section>
     <section class="about-me">
-        <div class="txt">
-            <h1 class="titulo">
+        <div class="txt4">
+            <h1 class="titulo4">
                 Gosto musical e mais sobre mim!
             </h1>
-            <p class="descricao">
+            <p class="descricao4">
                   Meus gostos musicais se baseiam principalmente na cultura do Hip-Hop e do Trap/Rap. Artistas como
                 Veigh, Teto e Matuê são, com certeza, minhas maiores referências no cenário nacional da música. Já no
                 cenário internacional, artistas como 21 Savage, Metro Boomin e Kendrick Lamar são os que mais me chamam
-                a atenção!</p><img class="image-zig2" src="/src/img/msc.png" alt="">
-            <p class="descricao">
+                a atenção!</p>
+            <p class="descricao4">
                   Quando falamos de esportes, não posso deixar de dizer: aqui é Grêmio pra caralho ❤️. Sem dúvida, é uma
                 paixão que tenho desde moleque, uma paixão que vem de vô para pai, e de pai para filho, e que, se tudo
                 der certo, passará de avô para neto...
-            </p><img class="image-zig2" src="/src/img/grem.png" alt="">
-            <p class="descricao">
+            </p>
+            <p class="descricao4">
                   Outra paixão que tenho também, ou melhor, uma compulsão, é por tênis. Gosto muito de colecionar e de
                 torná-los ainda mais especiais!
-            </p><img class="image-zig2" src="/src/img/ten.png" alt="">
+            </p>
         </div>
-
+        <div class="music">
+            <img class="image-zig4" src="/src/img/msc.png" alt="">
+            <img class="image-zig4" src="/src/img/grem.png" alt="">
+            <img class="image-zig4" src="/src/img/ten.png" alt="">
+        </div>
     </section>
 </body>
 
