--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -87,7 +87,7 @@
     <section class="about-me">
         <div class="txt4">
             <h1 class="titulo4">
-                Gosto musical e mais sobre mim!
+                Mais sobre mim!
             </h1>
             <p class="descricao4">
                   Meus gostos musicais se baseiam principalmente na cultura do Hip-Hop e do Trap/Rap. Artistas como
