--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 DEVELOPER & DESIGNER
             </h1>
             <p class="descricao">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident optio nostrum tempore repellat id
-                molestiae, perferendis numquam dolores, ad quam deleniti expedita ea, quis iusto eligendi modi esse quia
-                ut!
+                Olá, meu nome é Lorenzo Ziglioli. Sou um desenvolvedor júnior e busco constantemente aprender cada vez
+                mais!
+                Que tal conhecer um pouco mais sobre mim e conferir alguns dos projetos nos quais contribui? ;)
             </p>
         </div>
         <div class="image">
@@ -119,11 +119,9 @@
                     </h2>
                 </a>
                 <img src="/src/img/trash.png" class="projetos-image" alt="">
-                <p class="descricao-projetos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ex saepe
-                    iusto
-                    itaque inventore libero neque tempore quae quia facilis expedita vitae hic alias mollitia sapiente
-                    id,
-                    dolore nam magni.</p>
+                <p class="descricao-projetos">Um sistema que mapeia os pontos de coleta e descarte de lixo em nossa
+                    cidade. Além disso, apresenta uma função de vitrine, onde empresas podem criar anúncios relacionados
+                    ao lixo eletrônico.</p>
             </div>
 
 
@@ -133,11 +131,8 @@
                             alt="">AluraBooks</h2>
                 </a>
                 <img src="/src/img/alurabooks.png" class="projetos-image" alt="">
-                <p class="descricao-projetos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ex saepe
-                    iusto
-                    itaque inventore libero neque tempore quae quia facilis expedita vitae hic alias mollitia sapiente
-                    id,
-                    dolore nam magni.</p>
+                <p class="descricao-projetos">Um site que apresenta os maiores livros de aprendizado sobre programação e
+                    tecnologia.</p>
             </div>
 
 
@@ -146,11 +141,9 @@
                     <h2 class="fokus"> <img class="linguagens-logo" src="/src/img/JavaScript-logo.png" alt="">Fokus</h2>
                 </a>
                 <img src="/src/img/fokus.png" class="projetos-image" alt="">
-                <p class="descricao-projetos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ex saepe
-                    iusto
-                    itaque inventore libero neque tempore quae quia facilis expedita vitae hic alias mollitia sapiente
-                    id,
-                    dolore nam magni.</p>
+                <p class="descricao-projetos">Um app que cria um timer de estudos, com músicas para concentração e
+                    efeitos sonoros para um ambiente mais imersivo.
+                </p>
             </div>
 
 
@@ -160,28 +153,25 @@
                         compras</h2>
                 </a>
                 <img src="/src/img/lista-compras.png" class="projetos-image" alt="">
-                <p class="descricao-projetos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ex saepe
-                    iusto
-                    itaque inventore libero neque tempore quae quia facilis expedita vitae hic alias mollitia sapiente
-                    id,
-                    dolore nam magni.</p>
+                <p class="descricao-projetos">Uma lista de compras :)</p>
             </div>
         </div>
 </body>
 <script>
-    document.getElementById("openModal").addEventListener("click", function(event) {
+    document.getElementById("openModal").addEventListener("click", function (event) {
         event.preventDefault();
         document.getElementById("contatoModal").style.display = "flex";
     });
-    
-    document.getElementById("closeModal").addEventListener("click", function() {
+
+    document.getElementById("closeModal").addEventListener("click", function () {
         document.getElementById("contatoModal").style.display = "none";
     });
-    
-    window.onclick = function(event) {
+
+    window.onclick = function (event) {
         if (event.target == document.getElementById("contatoModal")) {
             document.getElementById("contatoModal").style.display = "none";
         }
     };
-    </script>
+</script>
+
 </html>
