--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -114,16 +114,16 @@
                 Meus gosto musica se baseia basicamente na cultura do Hip-Hop e do Trap/Rap... Artistas como Veigh, Teto
                 e Matuê sao com certeza minha maior referencia no cenário nascional da musica!
                 Já quando falamos de cenário internascionar, artistar como 21 Savage, Metro Boomin e Kendrick Lamar são
-                com certeza os que mais me chamam a atenção! </p>
+                com certeza os que mais me chamam a atenção! </p><img class="image-zig4-o" src="/src/img/msc.png" alt="">
             <p class="descricao4">
                 Quando falamos de esportes não posso deixar de falar que aqui é Grêmio pra caralho ❤️<br> Sem duvida uma
                 paixão que tenho desde muleke, uma paixão de vem de vô para pai, e de pai para filho, e que se der tudo
                 certo, passara de filho para neto...
-            </p>
+            </p><img class="image-zig4-o" src="/src/img/grem.png" alt="">
             <p class="descricao4">
                 Outra paixão que tenho também, ou melhor, uma compulsão é por tênis, gosto muito de colecionar e fazer
                 deles mais especiais ainda!
-            </p>
+            </p><img class="image-zig4-o" src="/src/img/ten.png" alt="">
         </div>
         <div class="music">
             <img class="image-zig4" src="/src/img/msc.png" alt="">
